# how_to_test

./: .clang-format  .clang-tidy  .cmake-format  .gitattributes  .gitignore  LICENSE  README.md
source/: CMakeLists.txt
source/behavior/: CMakeLists.txt  behavior.h  behavior_test.cpp
source/logic/: CMakeLists.txt  logic.h  logic_test.cpp
